--- a/fusion.html
+++ b/fusion.html
@@ -137,6 +137,8 @@
 
       </nav>
 
+<!--- aside en el carrito de compras-->
+
       <aside class="product-detail inactive">
         <div class="title-container">
           <img src="./icons/flechita.svg" alt="arrow">
@@ -185,6 +187,30 @@
       </div>
       </aside>
 
+
+
+      <!--- aside de detalles de cada producto -->
+
+
+      <aside class="productdetail inactive">
+        <div class="product-close">
+          <img src="./icons/icon_close.png" alt="close">
+        </div>
+        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="bike">
+        <div class="productinfo">
+          <p>$35,00</p>
+          <p>Bike</p>
+          <p>With its practical position, this bike also fulfills a decorative function, add your hall or workspace.</p>
+          <button class="primary-button add-to-cart-button">
+            <img src="./icons/bt_add_to_cart.svg" alt="add to cart">
+            Add to cart
+          </button>
+        </div>
+      </aside>
+
+
+<!--- Lista de productos -->
+
     <section class="main-container">
         <div class="cards-container">
     
@@ -203,6 +229,8 @@
 
      </section>
     -->
+
+
 
       <script src="./main.js"></script>
 
